--- a/codegen/templates/fastapi/api_test.mustache
+++ b/codegen/templates/fastapi/api_test.mustache
@@ -5,7 +5,6 @@
 
 from fastapi.testclient import TestClient
 import pytest
-import {{packageName}}
 {{#imports}}{{import}}  # noqa: F401
 {{/imports}}
 
@@ -50,6 +49,52 @@ async def test_{{operationId}}(client: TestClient):
 
     # uncomment below to assert the status code of the HTTP response
     #assert response.status_code == 200
+
+
+{{#vendorExtensions.x-skip-test}}
+@pytest.mark.skip("{{reason}}")
+{{/vendorExtensions.x-skip-test}}
+@pytest.mark.asyncio
+async def test_{{operationId}}_no_impl(client: TestClient, mocker):
+    """Test case for {{{operationId}}} when there is no implementation
+
+    {{{summary}}}
+    """
+
+    mocker.patch(
+        "{{packageName}}.impl.apis.{{classFilename}}_impl",
+        {{operationId}}=None,
+    )
+
+    {{#bodyParam}}
+    {{paramName}} = {{#isContainer}}[{{/isContainer}}{{{example}}}{{#isContainer}}]{{/isContainer}}
+    {{/bodyParam}}
+    {{#queryParams}}
+    {{#-first}}params = [{{/-first}}("{{paramName}}", {{{example}}}){{^-last}}, {{/-last}}{{#-last}}]{{/-last}}{{/queryParams}}
+    headers = {{=<% %>=}}{<%#headerParams%><%={{ }}=%>
+        "{{paramName}}": {{{example}}},{{/headerParams}}{{#authMethods}}
+        {{#isOAuth}}"Authorization": "Bearer special-key",{{/isOAuth}}{{#isApiKey}}"{{name}}": "special-key",{{/isApiKey}}{{#isBasicBasic}}"Authorization": "BasicZm9vOmJhcg==",{{/isBasicBasic}}{{#isBasicBearer}}"Authorization": "Bearer special-key",{{/isBasicBearer}}{{/authMethods}}
+    }
+    {{#formParams}}
+    {{#-first}}
+    data = {
+    {{/-first}}
+        "{{paramName}}": {{{example}}}{{^-last}},{{/-last}}
+    {{#-last}}
+    }
+    {{/-last}}
+    {{/formParams}}
+    response = client.request(
+        "{{httpMethod}}",
+        "{{{path}}}"{{#pathParams}}{{#-first}}.format({{/-first}}{{baseName}}={{{example}}}{{^-last}}, {{/-last}}{{#-last}}){{/-last}}{{/pathParams}},
+        headers=headers,{{#bodyParam}}
+        json={{paramName}},{{/bodyParam}}{{#formParams}}{{#-first}}
+        data=data,{{/-first}}{{/formParams}}{{#queryParams}}{{#-first}}
+        params=params,{{/-first}}{{/queryParams}}
+    )
+
+    # uncomment below to assert the status code of the HTTP response
+    #assert response.status_code == 501
 
 {{/operation}}
 {{/operations}}
