--- a/codegen/templates/fastapi/api_test.mustache
+++ b/codegen/templates/fastapi/api_test.mustache
@@ -49,8 +49,99 @@ async def test_{{operationId}}_happy_case(client: TestClient):
         params=params,{{/-first}}{{/queryParams}}
     )
 
-    # uncomment below to assert the status code of the HTTP response
     assert response.status_code >= 200 and response.status_code < 300
+
+
+{{#vendorExtensions.x-skip-test}}
+@pytest.mark.skip("{{reason}}")
+{{/vendorExtensions.x-skip-test}}
+@pytest.mark.asyncio
+async def test_{{operationId}}_content(client: TestClient, mocker):
+    """Test case for {{{operationId}}} when there is no implementation
+
+    {{{summary}}}
+    """
+
+    mocker.patch(
+        "{{packageName}}.apis.{{classFilename}}.{{classFilename}}_impl.{{operationId}}",
+        side_effect=['foo']
+    )
+
+    {{#bodyParam}}
+    {{paramName}} = {{#isContainer}}[{{/isContainer}}{{{example}}}{{#isContainer}}]{{/isContainer}}
+    {{/bodyParam}}
+    {{#queryParams}}
+    {{#-first}}params = [{{/-first}}("{{paramName}}", {{{example}}}){{^-last}}, {{/-last}}{{#-last}}]{{/-last}}{{/queryParams}}
+    headers = {{=<% %>=}}{<%#headerParams%><%={{ }}=%>
+        "{{paramName}}": {{{example}}},{{/headerParams}}{{#authMethods}}
+        {{#isOAuth}}"Authorization": "Bearer special-key",{{/isOAuth}}{{#isApiKey}}"{{name}}": "special-key",{{/isApiKey}}{{#isBasicBasic}}"Authorization": "BasicZm9vOmJhcg==",{{/isBasicBasic}}{{#isBasicBearer}}"Authorization": "Bearer special-key",{{/isBasicBearer}}{{/authMethods}}
+    }
+    {{#formParams}}
+    {{#-first}}
+    data = {
+    {{/-first}}
+        "{{paramName}}": {{{example}}}{{^-last}},{{/-last}}
+    {{#-last}}
+    }
+    {{/-last}}
+    {{/formParams}}
+    response = client.request(
+        "{{httpMethod}}",
+        "{{{path}}}"{{#pathParams}}{{#-first}}.format({{/-first}}{{baseName}}={{{example}}}{{^-last}}, {{/-last}}{{#-last}}){{/-last}}{{/pathParams}},
+        headers=headers,{{#bodyParam}}
+        json={{paramName}},{{/bodyParam}}{{#formParams}}{{#-first}}
+        data=data,{{/-first}}{{/formParams}}{{#queryParams}}{{#-first}}
+        params=params,{{/-first}}{{/queryParams}}
+    )
+
+    assert response.status_code == 200
+    assert response.content == 'foo'
+
+
+{{#vendorExtensions.x-skip-test}}
+@pytest.mark.skip("{{reason}}")
+{{/vendorExtensions.x-skip-test}}
+@pytest.mark.asyncio
+async def test_{{operationId}}_no_content(client: TestClient, mocker):
+    """Test case for {{{operationId}}} when there is no implementation
+
+    {{{summary}}}
+    """
+
+    mocker.patch(
+        "{{packageName}}.apis.{{classFilename}}.{{classFilename}}_impl.{{operationId}}",
+        side_effect=[None]
+    )
+
+    {{#bodyParam}}
+    {{paramName}} = {{#isContainer}}[{{/isContainer}}{{{example}}}{{#isContainer}}]{{/isContainer}}
+    {{/bodyParam}}
+    {{#queryParams}}
+    {{#-first}}params = [{{/-first}}("{{paramName}}", {{{example}}}){{^-last}}, {{/-last}}{{#-last}}]{{/-last}}{{/queryParams}}
+    headers = {{=<% %>=}}{<%#headerParams%><%={{ }}=%>
+        "{{paramName}}": {{{example}}},{{/headerParams}}{{#authMethods}}
+        {{#isOAuth}}"Authorization": "Bearer special-key",{{/isOAuth}}{{#isApiKey}}"{{name}}": "special-key",{{/isApiKey}}{{#isBasicBasic}}"Authorization": "BasicZm9vOmJhcg==",{{/isBasicBasic}}{{#isBasicBearer}}"Authorization": "Bearer special-key",{{/isBasicBearer}}{{/authMethods}}
+    }
+    {{#formParams}}
+    {{#-first}}
+    data = {
+    {{/-first}}
+        "{{paramName}}": {{{example}}}{{^-last}},{{/-last}}
+    {{#-last}}
+    }
+    {{/-last}}
+    {{/formParams}}
+    response = client.request(
+        "{{httpMethod}}",
+        "{{{path}}}"{{#pathParams}}{{#-first}}.format({{/-first}}{{baseName}}={{{example}}}{{^-last}}, {{/-last}}{{#-last}}){{/-last}}{{/pathParams}},
+        headers=headers,{{#bodyParam}}
+        json={{paramName}},{{/bodyParam}}{{#formParams}}{{#-first}}
+        data=data,{{/-first}}{{/formParams}}{{#queryParams}}{{#-first}}
+        params=params,{{/-first}}{{/queryParams}}
+    )
+
+    assert response.status_code == 204
+    assert response.content == None
 
 
 {{#vendorExtensions.x-skip-test}}
@@ -95,7 +186,6 @@ async def test_{{operationId}}_no_impl(client: TestClient, mocker):
         params=params,{{/-first}}{{/queryParams}}
     )
 
-    # uncomment below to assert the status code of the HTTP response
     assert response.status_code == 501
 
 
@@ -141,9 +231,6 @@ async def test_{{operationId}}_http_exception(client: TestClient, mocker):
         params=params,{{/-first}}{{/queryParams}}
     )
 
-    print(response)
-
-    # uncomment below to assert the status code of the HTTP response
     assert response.status_code == 500
     assert response.content == 'foo'
 
