--- a/codegen/templates/fastapi/api.mustache
+++ b/codegen/templates/fastapi/api.mustache
@@ -74,7 +74,7 @@ async def {{operationId}}(
 
     try:
         logger.debug("Starting request")
-        impl_result = await {{classFilename}}_impl.{{operationId}}({{#allParams}}{{paramName}}, {{/allParams}}pool=request.app.state.pool)
+        impl_result = await {{classFilename}}_impl.{{operationId}}({{#allParams}}{{paramName}}, {{/allParams}}pool=request.app.state.pool{{#hasAuthMethods}}{{#authMethods}}, token_model=token_auth0{{/authMethods}}{{/hasAuthMethods}})
         logger.debug("Request ready")
         content = impl_result[0] if isinstance(impl_result, tuple) else impl_result
         # default to status 200/204 but give the impl the option to define a different status code when returning content
